fix top spacing

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -2094,6 +2094,9 @@
 
 /* Mobile */
 @media only screen and (min-width: 0rem) {
+    .services.regular {
+        margin-top: (50/16em);
+    }
     .services {
         z-index: 100;
         position: relative;
